tdf#168886 tdf#168237 vcl: Preserve EMF GfxLink on clipboard paste

When EMF is pasted from the Windows clipboard, GetGraphic() for
GDIMETAFILE format previously extracted only the GDIMetaFile,
discarding the GfxLink with the original EMF binary buffer. At DOCX
save time, the missing GfxLink forced re-generation through EMFWriter,
which wrote VirtualDevice metrics into szlDevice/szlMillimeters
instead of the original reference device metrics. This caused scaling
errors after DOCX reload.

Fix: import EMF/WMF directly into Graphic in GetGraphic(), preserving
the GfxLink with original binary data.

Change-Id: I45a20917839a9157dea6cf719d18f54e65e0102a
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/203137
Reviewed-by: Bartosz Kosiorek <gang65@poczta.onet.pl>
Tested-by: Jenkins
(cherry picked from commit 2b97b8008b8bebffb1d4a2732266e19ee51c88c6)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/204485